# code

./: README.md  RawViewer 2.0.rar
ApplicationTest/: gradle.properties
ApplicationTest/app/: build.gradle  proguard-rules.pro
ApplicationTest/app/src/main/: AndroidManifest.xml
BuildCpuFeaturesLib/app/: CMakeLists.txt  build.gradle
BuildCpuFeaturesLib/app/cpu_features-0.3.0/: CMakeLists.txt
BuildCpuFeaturesLib/app/cpu_features-0.3.0/ndk_compat/: CMakeLists.txt  cpu-features.c
BuildCpuFeaturesLib/app/src/androidTest/java/mqms/ncp/navercorp/com/buildcpufeatureslib/: ExampleInstrumentedTest.java
BuildCpuFeaturesLib/app/src/main/: AndroidManifest.xml
BuildCpuFeaturesLib/app/src/main/cpp/: func.c  main.c
BuildCpuFeaturesLib/app/src/main/java/mqms/ncp/navercorp/com/buildcpufeatureslib/: MainActivity.java
BuildCpuFeaturesLib/app/src/main/res/values/: strings.xml
BuildCpuFeaturesLib/app/src/test/java/mqms/ncp/navercorp/com/buildcpufeatureslib/: ExampleUnitTest.java
BuildCpuFeaturesLib/gradle/wrapper/: gradle-wrapper.properties
DecompiledViberSrc/app/: build.gradle
DecompiledViberSrc/app/src/main/: AndroidManifest.xml
DecompiledViberSrc/gradle/wrapper/: gradle-wrapper.properties
PhotoLive/css/: HomePageCSS.css  NewsCSS.css
PhotoLive/html/: HomePage_1.html  News_5.html
TestAndroidJs/app/: build.gradle  proguard-rules.pro
TestAndroidJs/app/src/main/: AndroidManifest.xml
TestGPUImage/app/: CMakeLists.txt  build.gradle
TestGPUImage/app/src/androidTest/java/mqms/ncp/navercorp/com/testgpuimage/: ExampleInstrumentedTest.java
TestGPUImage/app/src/main/: AndroidManifest.xml
TestGPUImage/app/src/main/cpp/: CvxText.cpp  bs.cpp  cpu_features_func.cpp
TestGPUImage/app/src/main/java/mqms/ncp/navercorp/com/testgpuimage/: Constant.java  Logger.java  MainActivity.java  NativeUtils.java  StartPlayVideoReq.java  WaterMarkUtils.java
TestGPUImage/app/src/main/res/layout/: activity_main.xml
TestGPUImage/app/src/main/res/values/: strings.xml
TestGPUImage/app/src/test/java/mqms/ncp/navercorp/com/testgpuimage/: ExampleUnitTest.java
TestGPUImage/gradle/wrapper/: gradle-wrapper.properties
TestKSoapAndroid/app/: build.gradle
TestPureJava/: settings.gradle
TestPureJava/app/: build.gradle
TestPureJava/gradle/wrapper/: gradle-wrapper.properties
TestRecordScreenCFR/: gradle.properties
TestRecordScreenCFR/app/: build.gradle
TestRecordScreenCFR/gradle/wrapper/: gradle-wrapper.properties
TestRelativeLayout/app/: build.gradle
TestRxAndroid/: build.gradle  gradle.properties
TestRxAndroid/app/: build.gradle  proguard-rules.pro
TestSurfaceView/app/: build.gradle
TestSurfaceView/gradle/wrapper/: gradle-wrapper.properties
TestUseStaticOpenCV/app/: build.gradle
TestUseStaticOpenCV/app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
TestUseStaticOpenCV/app/src/main/cpp/include/: cpu-features.h
TestUseStaticOpenCV/app/src/main/cpp/include/opencv/opencv2/stitching/detail/: warpers_inl.hpp
TestUseStaticOpenCV/gradle/wrapper/: gradle-wrapper.properties
daily_expense/: README.md  local.properties  pubspec.yaml
daily_expense/android/app/: build.gradle  google-services.json
daily_expense/assets/string/: abc.json
daily_expense/dataBaseBackup/: dump-dailyexpense-202104281429.sql
daily_expense/ios/Runner/: Info.plist
daily_expense/ios/Runner.xcodeproj/: project.pbxproj
daily_expense/lib/: add_expense_item.dart  add_expense_type.dart  constants.dart  main.dart
daily_expense/lib/bloc/: expense_edit_mode_bloc.dart  expense_edit_mode_info_bloc.dart  expense_item_select_bloc.dart  expense_list_bloc.dart  home_bloc.dart
daily_expense/lib/customViews/: classic_button.dart  expense_list_item_widget.dart
daily_expense/lib/data_provider/: cached_local_data.dart
daily_expense/lib/http/: http_req_if.dart
daily_expense/lib/model/: expense_item.dart  test_api_data.dart
daily_expense/lib/page/: edit_expense_type_page.dart  home_page.dart
daily_expense/lib/utils/: file_utils.dart  hint_disp_utils.dart  id_utils.dart  local_data_storage.dart  sys_utils.dart
daily_expense/lib/view/: add_expense_item.dart  add_expense_type.dart
daily_expense/pullFiles/: expenseRecord_Json.txt  exportExpenseRecord.xlsx
daily_expense/pullFiles/testFlutter/: DailyExpense.xlsx  DailyExpenseNote.txt  DailyExpenseNote1.txt  DailyExpenseNote2.txt  DailyExpenseNote3.txt  expenseRecord_0.txt  expenseRecord_1.txt  expenseRecord_2.txt  exportExpenseRecord.xlsx  genExcelFromOriginTxt.xlsx
daily_expense/test/: widget_test.dart
first_flutter_app/: README.md  pubspec.yaml
first_flutter_app/android/app/: build.gradle
first_flutter_app/assets/string/: abc.json
first_flutter_app/ios/Runner/: Info.plist
first_flutter_app/ios/Runner.xcodeproj/: project.pbxproj
first_flutter_app/lib/: LakeDemoUI.dart  TestBtn1UI.dart  TestBtn2UI.dart  TestBtn3UI.dart  TestBtn4UI.dart  TestClass.dart  TestJsonSerializable.dart  TestJsonSerializable.g.dart  main.dart
first_flutter_app/test/: widget_test.dart
mediaCodecDemo/: README.md  gradle.properties
mediaCodecDemo/app/: CMakeLists.txt  build.gradle
mediaCodecDemo/app/src/androidTest/java/com/dxtx/codec/: ApplicationTest.java
mediaCodecDemo/app/src/main/: AndroidManifest.xml
mediaCodecDemo/app/src/main/java/com.jrzhuxue/identity/common/util/: ByteUtil.java
mediaCodecDemo/app/src/main/java/com/dxtx/codec/: MainActivity.java  MediaCodecUtils.java  TakeVideoActivity.java  VideoCodecModel.java  VideoCodecTask.java  VideoCodecTask2.java
mediaCodecDemo/app/src/main/java/com/dxtx/test/: NativeUtils.java  SecondActivity.java  TakeVideoActivity2.java
mediaCodecDemo/app/src/main/java/com/dxtx/test/record/: CameraUtils.java  VideoRecordTask.java
mediaCodecDemo/app/src/main/jni/: Android.mk  Application.mk  CvxText.cpp  CvxText.h  bs.cpp
mediaCodecDemo/app/src/main/res/layout/: activity_main.xml  activity_take_video.xml
mediaCodecDemo/app/src/main/res/values/: attrs.xml  strings.xml
mediaCodecDemo/app/src/test/java/com/dxtx/codec/: ExampleUnitTest.java
test/app/: build.gradle
test/app/src/main/: AndroidManifest.xml
(+20261 files in other folders)
